# websocket-rs

./: .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  Makefile  README.md  canary.py  prek.toml
.github/workflows/: ci.yml  release.yml
@issues/pending/: 0003-rfc-quoted-string-split-in-extensions.md
examples/websocket_client/: Cargo.toml
examples/websocket_client/src/: main.rs
examples/websocket_client/tests/: nginx_websocket.rs
examples/websocket_client/tests/helpers/: echo_server.rs  mod.rs  nginx.rs
examples/websocket_e2e_nginx/: Cargo.toml
examples/websocket_e2e_nginx/src/: lib.rs
examples/websocket_e2e_nginx/tests/: nginx_websocket.rs
examples/websocket_e2e_nginx/tests/helpers/: mod.rs
examples/websocket_reverse_proxy/: Cargo.toml
examples/websocket_reverse_proxy/src/: main.rs
examples/websocket_server/: Cargo.toml
examples/websocket_server/src/: main.rs
examples/wscat/: Cargo.toml
examples/wscat/src/: cli.rs  client.rs  common.rs  console.rs  main.rs  proxy.rs  redirect.rs  server.rs  slash.rs  stream.rs  tls.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_client_connection.rs  fuzz_client_connection_established.rs  fuzz_deflate_compress.rs  fuzz_deflate_decompress.rs  fuzz_extension_parse.rs  fuzz_extension_parse_strict.rs  fuzz_frame_decode.rs  fuzz_handshake.rs  fuzz_handshake_request.rs  fuzz_http_response.rs  fuzz_server_connection.rs  fuzz_server_connection_established.rs
issues/: 0000-template.md  0013-rfc-server-handshake-error-response.md  0014-rfc-client-non101-http-procedures.md  0015-rfc-server-multiple-permessage-deflate.md  0017-change-replace-flate2-with-noflate.md  0018-enhancement-sha1-aws-lc-rs-feature.md  0019-feat-add-send-pong-api.md  0019-refactor-extract-common-frame-processing.md  0020-fix-close-internal-utf8-boundary.md  0020-fix-deps-version-pinning.md  0021-rfc-deflate-trailer-empty-block.md  0022-fix-server-extensions-multiple-header.md  0022-rfc-server-extensions-multiple-header.md  0023-add-nginx-websocket-e2e-test.md  0024-add-curl-websocket-e2e-test.md  0025-refactor-move-nginx-e2e-to-websocket-client.md  0026-refactor-allow-dead-code-to-expect.md  0027-change-http11-version-patch-level.md  0028-bug-fix-doc-comment-unwrap.md  0029-add-extension-parse-error-display.md  0030-refactor-internal-api-pub-crate.md  0031-refactor-is-valid-token-dedup.md  0032-refactor-close-method-dedup.md  0033-refactor-duplicate-methods-dedup.md  0034-refactor-parse-error-type-unify.md  0035-refactor-remove-deprecated-from-extension.md  0036-refactor-remove-resolved-todo.md  0037-test-remove-panic-only-pbt.md  0038-test-add-error-kind-variants.md  0039-security-fuzzing-targets-expand.md  0040-rfc-fix-references.md  0041-refactor-shared-state-encapsulation.md  0042-refactor-connection-state-transition.md  0043-refactor-split-connection-shared.md  0044-refactor-split-handshake.md  0045-refactor-split-accept-handshake.md  0046-refactor-split-complete-handshake.md  0047-refactor-options-fields-private.md  0048-refactor-timestamp-field-private.md  0049-refactor-parse-dedup.md  (+7 more)
issues/closed/: 0001-rfc-close-frame-in-connecting-state.md  0002-rfc-duplicate-reserved-headers-in-handshake.md  0003-rfc-quoted-string-split-in-extensions.md  0004-rfc-missing-sec-websocket-version-on-reject.md  0005-rfc-leading-zeros-in-window-bits.md  0006-security-accept-handshake-auto-no-origin-check.md  0007-security-pending-frame-data-unbounded.md  0008-security-fragment-buffer-unbounded.md  0009-security-frame-decoder-buffer-unbounded.md  0010-rfc-client-request-uri-validation.md  0011-rfc-server-request-uri-scheme-validation.md  0012-rfc-pmce-duplicate-rejection.md  0013-rfc-server-handshake-error-response.md  0014-rfc-client-non101-http-procedures.md  0015-rfc-server-multiple-permessage-deflate.md  0017-change-replace-flate2-with-noflate.md  0018-enhancement-sha1-aws-lc-rs-feature.md  0019-feat-add-send-pong-api.md  0019-refactor-extract-common-frame-processing.md  0020-fix-close-internal-utf8-boundary.md  0021-rfc-deflate-trailer-empty-block.md  0022-fix-server-extensions-multiple-header.md  0023-add-nginx-websocket-e2e-test.md  0025-refactor-move-nginx-e2e-to-websocket-client.md  0026-refactor-allow-dead-code-to-expect.md  0027-change-http11-version-patch-level.md  0028-bug-fix-doc-comment-unwrap.md  0029-add-extension-parse-error-display.md  0030-refactor-internal-api-doc-hidden.md  0031-refactor-is-valid-token-dedup.md  0032-refactor-close-method-dedup.md  0033-refactor-duplicate-methods-dedup.md  0034-refactor-parse-error-type-unify.md  0035-change-remove-deprecated-from-extension.md  0036-refactor-remove-resolved-todo.md  0037-test-remove-panic-only-pbt.md  0038-test-add-error-kind-variants.md  0039-security-fuzzing-targets-expand.md  0040-rfc-fix-references.md  0041-refactor-shared-state-encapsulation.md  (+17 more)
issues/pending/: 0024-add-curl-websocket-e2e-test.md
pbt/: Cargo.toml
pbt/tests/: prop_buf.rs  prop_client_connection.rs  prop_close_code.rs  prop_connection.rs  prop_connection_state.rs  prop_deflate.rs  prop_error.rs  prop_frame.rs  prop_handshake.rs  prop_opcode.rs  prop_permessage_deflate.rs  prop_rfc6455.rs  prop_server_connection.rs  prop_time.rs  prop_token.rs  prop_violations.rs  prop_websocket_extension.rs
refs/: rfc9110.txt
skills/shiguredo-websocket/: SKILL.md
src/: buf.rs  error.rs  fragment_buffer.rs  frame_policy.rs  lib.rs  time.rs  token.rs  websocket_client_connection.rs  websocket_close.rs  websocket_connection_shared.rs  websocket_connection_types.rs  websocket_extension.rs  websocket_frame.rs  websocket_handshake.rs  websocket_handshake_request.rs  websocket_handshake_response.rs  websocket_opcode.rs  websocket_server_connection.rs
src/deflate/: mod.rs  permessage_deflate.rs
tests/: test_token.rs  test_websocket_connection_shared.rs  test_websocket_extension.rs
