[package]
name = "shiguredo_websocket"
version = "2026.2.0-canary.0"
edition = "2024"
rust-version = "1.88"
description = "WebSocket Library"
readme = "README.md"
homepage = "https://github.com/shiguredo/websocket-rs"
repository = "https://github.com/shiguredo/websocket-rs"
license = "Apache-2.0"
include = ["/LICENSE", "/README.md", "/src/**"]

[workspace]
members = [
  "examples/websocket_client",
  "examples/websocket_reverse_proxy",
  "examples/websocket_server",
  "pbt",
]
exclude = ["fuzz"]

[dependencies]
# Sec-WebSocket-Accept の SHA-1 計算に使用する
aws-lc-rs = "1.16"
base64ct = { version = "1.8", features = ["std"] }
noflate = "0.1"
shiguredo_http11 = "2026.4"
