[package]
name = "fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shiguredo_websocket = { path = ".." }

[[bin]]
name = "fuzz_frame_decode"
path = "fuzz_targets/fuzz_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handshake"
path = "fuzz_targets/fuzz_handshake.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_extension_parse"
path = "fuzz_targets/fuzz_extension_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_deflate_decompress"
path = "fuzz_targets/fuzz_deflate_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handshake_request"
path = "fuzz_targets/fuzz_handshake_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_server_connection"
path = "fuzz_targets/fuzz_server_connection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_client_connection"
path = "fuzz_targets/fuzz_client_connection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_client_connection_established"
path = "fuzz_targets/fuzz_client_connection_established.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_server_connection_established"
path = "fuzz_targets/fuzz_server_connection_established.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_deflate_compress"
path = "fuzz_targets/fuzz_deflate_compress.rs"
test = false
doc = false
bench = false
