[package]
name = "websocket_client"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
aws-lc-rs = "1.16"
noargs = "0.4"
rustls = { version = "0.23", default-features = false, features = [
  "aws-lc-rs",
  "std",
  "tls12",
] }
rustls-platform-verifier = "0.7"
shiguredo_http11 = "2026.4"
shiguredo_websocket = { path = "../.." }
tokio = { version = "1.52", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "time",
] }
tokio-rustls = "0.26"
