[package]
name = "websocket_client"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# masking key と nonce 用の暗号論的乱数生成に使用する
aws-lc-rs.workspace = true
# CLI 引数のパースに使用する
noargs = "0.4"
# wss:// での TLS 通信に使用する
rustls = { version = "0.23", default-features = false, features = [
  "aws-lc-rs",
  "std",
  "tls12",
] }
# プラットフォームのルート証明書ストアによる TLS サーバー証明書検証に使用する
rustls-platform-verifier = "0.7"
# WebSocket ハンドシェイクの HTTP リクエスト/レスポンス処理に使用する
shiguredo_http11.workspace = true
# WebSocket クライアント本体
shiguredo_websocket.workspace = true
# 非同期 I/O ランタイムに使用する
tokio = { version = "1.52", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "time",
] }
# tokio と rustls の統合に使用する
tokio-rustls = "0.26"

[dev-dependencies]
# Docker コンテナ起動 (実 nginx 相手の e2e テスト)
testcontainers = { version = "0.27", default-features = false, features = ["aws-lc-rs"] }
