[package]
name = "websocket_e2e_nginx"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# WebSocket クライアント・サーバー本体
shiguredo_websocket.workspace = true
# masking key / nonce 用の暗号論的乱数生成に使用する
aws-lc-rs.workspace = true
# 非同期ランタイム (echo サーバーの TCP 処理に使用する)
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

[dev-dependencies]
# Docker コンテナ起動 (実 nginx 相手の e2e テスト)
testcontainers = { version = "0.27", default-features = false, features = ["aws-lc-rs"] }
