[package]
name = "websocket_reverse_proxy"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
shiguredo_websocket = { path = "../.." }
shiguredo_http11 = { version = "2026.1.0-canary.4" }
aws-lc-rs = "1.15.4"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "aws-lc-rs",
] }
tokio-rustls = "0.26"
rustls-platform-verifier = "0.6"
noargs = "0.4"
