[package]
name = "websocket_server"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
noargs = "0.4"
rustls = { version = "0.23", default-features = false, features = [
  "aws-lc-rs",
  "std",
  "tls12",
] }
shiguredo_websocket = { path = "../.." }
tokio = { version = "1.52", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
] }
tokio-rustls = "0.26"
